# bazel2proj

./: .gitignore  README.md  WORKSPACE  aspect.bzl  bazel2proj.sln  paket.dependencies
.github/workflows/: build.yml
bazel2proj/: BUILD.bazel  Bazel.fs  Domain.fs  MSBuild.fs  Program.fs  Thoth.fs  Xml.fs  bazel2proj.fsproj
bazel2proj.tests/: Bazel.fs  Program.fs  bazel2proj.tests.fsproj
examples/app/: .gitignore  BUILD.bazel  Fib.fs  Program.fs  README.md  generate-projects.sh  paket.dependencies
examples/lib/: .gitignore  README.md  WORKSPACE  app.fsproj  paket.dependencies  paket2bazel.config.json
examples/lib/app/: BUILD.bazel  Program.fs  app.fsproj
examples/lib/math/: BUILD.bazel  Math.fs  math.fsproj
examples/nuget/: BUILD.bazel  Program.fs  README.md  paket.dependencies  update-deps.sh
